welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(!estSurBiscuit()) {recule();}
if(estSurBiscuit()) {prendBiscuit();porteBiscuit();
while(!estSurBiscuit()) {avance();};
if(estSurBiscuit()) {recule();poseBiscuit();}